# ModernCppChallengeStudy

./: .gitignore  .gitmodules  CMakeLists.txt
math/Problem1/: CMakeLists.txt  README  main.cpp
math/Problem2/: CMakeLists.txt  README  main.cpp
scripts/: GetModules.cmake  linux-build.sh  linux-setup.sh
